--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -125,7 +125,7 @@
         "**/third_party/**": true
     },
     "files.eol": "\n",
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
     "better-comments.tags": [
         {
             "tag": "!",
