--- a/examples/platform/silabs/SiWx917/BUILD.gn
+++ b/examples/platform/silabs/SiWx917/BUILD.gn
@@ -50,7 +50,7 @@ import("${silabs_common_plat_dir}/SiWx917/args.gni")
 # Sanity check
 assert(chip_enable_wifi)
 import("${chip_root}/src/platform/silabs/SiWx917/args.gni")
-wisemcu_sdk_root = "${chip_root}/third_party/silabs/wisemcu-wifi-bt-sdk"
+#wisemcu_sdk_root = "${chip_root}/third_party/silabs/wisemcu-wifi-bt-sdk"
 silabs_common_plat_dir = "${chip_root}/examples/platform/silabs"
 
 config("chip_examples_project_config") {
@@ -245,7 +245,7 @@ source_set("siwx917-common") {
     "${wifi_sdk_dir}/ethernetif.cpp",
     "${wifi_sdk_dir}/lwip_netif.cpp",
     "${wifi_sdk_dir}/wfx_notify.cpp",
-    "SiWx917/rsi_if.c",
+    "SiWx917/sl_wifi_if.c",
     "SiWx917/wfx_rsi_host.c",
     "init_ccpPlatform.cpp",
     "matter_config.cpp",
