--- a/src/platform/silabs/SiWx917/BUILD.gn
+++ b/src/platform/silabs/SiWx917/BUILD.gn
@@ -14,10 +14,9 @@
 
 import("//build_overrides/chip.gni")
 
-import("${chip_root}/src/platform/device.gni")
-
 import("${chip_root}/build/chip/buildconfig_header.gni")
 import("${chip_root}/src/crypto/crypto.gni")
+import("${chip_root}/src/platform/device.gni")
 import("${chip_root}/third_party/silabs/silabs_board.gni")
 
 silabs_platform_dir = "${chip_root}/src/platform/silabs"
@@ -61,9 +60,9 @@ static_library("SiWx917") {
     "BLEManagerImpl.cpp",
     "ConfigurationManagerImpl.cpp",
     "PlatformManagerImpl.cpp",
-#    "bluetooth/ble_config.h",
-#    "bluetooth/wfx_sl_ble_init.c",
-#    "bluetooth/wfx_sl_ble_init.h",
+    "bluetooth/ble_config.h",
+    "bluetooth/wfx_sl_ble_init.c",
+    "bluetooth/wfx_sl_ble_init.h",
   ]
 
   # TODO: OTA on CCP platform
