--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -597,6 +597,7 @@
                 "efr32-brd4186a-switch",
                 "efr32-brd4187a-switch",
                 "efr32-brd4304a-switch",
+                "efr32-brd4338a-light-wifi-917-soc",
                 "efr32-brd4161a-window-covering",
                 "efr32-brd4163a-window-covering",
                 "efr32-brd4164a-window-covering",
