--- a/integrations/docker/images/stage-2/chip-build-efr32/Dockerfile
+++ b/integrations/docker/images/stage-2/chip-build-efr32/Dockerfile
@@ -19,6 +19,12 @@ RUN git clone --depth=1 --branch=v4.3.1 https://github.com/SiliconLabs/gecko_sdk
     rm -rf .git \
     && : # last line
 
+# Clone WiSeConnect Wi-Fi and Bluetooth Software 2.7.1-Matter (2be7a5b)
+RUN git clone --depth=1 --branch=2.7.1-Matter https://github.com/SiliconLabs/wiseconnect-wifi-bt-sdk.git /tmp/wiseconnect-wifi-bt-sdk && \
+    cd /tmp/wiseconnect-wifi-bt-sdk && \
+    rm -rf .git \
+    && : # last line
+
 # Clone Wiseconnect SDK 3.1.0-MatterCert1 (f84bf66)
 RUN git clone --depth=1 --branch=v3.1.0-MatterCert1 https://github.com/SiliconLabs/wiseconnect.git /tmp/wifi_sdk && \
     cd /tmp/wifi_sdk && \
@@ -61,9 +67,11 @@ RUN set -x \
     && : # last line
 
 ENV GSDK_ROOT=/opt/silabs/gecko_sdk/
-ENV WISECONNECT_PATH=/opt/silabs/wifi_sdk/
+ENV WISECONNECT_SDK_ROOT=/opt/silabs/wiseconnect-wifi-bt-sdk/
+ENV WISECONNECT3_SDK_ROOT=/opt/silabs/wifi_sdk/
 ENV PATH="${PATH}:/opt/silabs/slc_cli/"
 
 COPY --from=build /tmp/gecko_sdk /opt/silabs/gecko_sdk
+COPY --from=build /tmp/wiseconnect-wifi-bt-sdk/ /opt/silabs/wiseconnect-wifi-bt-sdk/
 COPY --from=build /tmp/wifi_sdk /opt/silabs/wifi_sdk
 COPY --from=build /tmp/slc_cli /opt/silabs/slc_cli
